Update: services, models, controller and frontend layout adjustments; added responsive design and UI improvements

--- a/Cryptology.Server/Cryptology.Server.csproj
+++ b/Cryptology.Server/Cryptology.Server.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\cryptology.client\cryptology.client.esproj">
+    <ProjectReference Include="..\cryptology.client\Cryptology.Client.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
